--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-responsive": "^10.0.0",
     "three": "^0.150.1",
     "valtio": "^1.11.2"
   },
