--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@react-three/fiber": "^8.12.0",
     "@types/react-color": "^3.0.6",
     "framer-motion": "^10.16.1",
+    "lucide-react": "^0.453.0",
     "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
